// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader13 Loader should render image avatar properly 1`] = `
<div>
  <div
    class="sc-gsTCUz llLtCb"
  >
    <div
      class="sc-bdfBwQ ealFXm"
    />
  </div>
</div>
`;

exports[`Loader13 Loader should render with all the props given 1`] = `
<div>
  <div
    class="sc-gsTCUz liajch"
  >
    <div
      class="sc-bdfBwQ irRoev"
    />
  </div>
</div>
`;

exports[`Loader13 Loader should render with default theme 1`] = `
<div>
  <div
    class="sc-gsTCUz AylWc"
  >
    <div
      class="sc-bdfBwQ ealFXm"
    />
  </div>
</div>
`;
